objects/ssot__LearnerLearningSystemActivity__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicTermId__c</fullName>
        <label>Academic Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityDateTime__c</fullName>
        <label>Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Learner Learning System Activity ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LMSId__c</fullName>
        <label>LMS Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearnerActivityType__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningManagementSystemId__c</fullName>
        <label>Learning Management System Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731039797710_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerLearningSystemActivity_Academ_rel</label>
        <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
        <relationshipLabel>LearnerLearningSystemActivity_Academ_rel</relationshipLabel>
        <relationshipName>rel_1731039797710_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731039816567_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerLearningSystemActivity_LMSId__rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>LearnerLearningSystemActivity_LMSId__rel</relationshipLabel>
        <relationshipName>rel_1731039816567_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731039939952_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerLearningSystemActivity_Learni_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>LearnerLearningSystemActivity_Learni_rel</relationshipLabel>
        <relationshipName>rel_1731039939952_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>